tests/0019-closure-closed-in-function.src.err
ERROR: Expected ';' but got 'f'
 | f = f_;
   ^
COMPILATION FAILED
